--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
   <link rel="import" href="../bower_components/font-roboto/roboto.html">
   <link rel="import" href="../bower_components/paper-toolbar/paper-toolbar.html">
+  <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
   <link rel="import" href="../bower_components/iron-icons/iron-icons.html">
 
   <style>
@@ -37,7 +38,6 @@
 <body unresolved>
 
   <paper-toolbar>
-    <paper-icon-button icon="menu" on-tap="menuAction"></paper-icon-button>
     <div class="title">4bars</div>
     <paper-icon-button icon="settings" on-tap="moreAction"></paper-icon-button>
   </paper-toolbar>
