added max height for container relative to screen size and added a white div to demonstrate

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     background-color: #AB47BC;
   }
   .container {
-    width: 80%;
+    width: 90%;
+    height: 100vh;
     margin: 50px auto;
   }
   </style>
@@ -39,8 +40,13 @@
 
   <paper-toolbar>
     <div class="title">4bars</div>
-    <paper-icon-button icon="settings" on-tap="moreAction"></paper-icon-button>
+    <paper-icon-button icon="settings"></paper-icon-button>
   </paper-toolbar>
+
+  <div class="container">
+    <div style="background-color: white; width: 100%; height: 100%">
+    </div>
+  </div>
 
 </body>
 
