added fullscreen button next to title for shits and giggles but it's not functional yet

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
 <body unresolved>
 
   <paper-toolbar>
+    <!-- I put the fullscreen button for shits and giggles but it's not functional right now -->
+    <paper-icon-button icon="fullscreen"></paper-icon-button>
     <div class="title">4bars</div>
     <paper-icon-button icon="settings"></paper-icon-button>
   </paper-toolbar>
