linked to components in index.html

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
   <!-- Below are the 4brs components -->
   <link rel="import" href="../bar-container.html">
+  <link rel="import" href="../beat-pad.html">
 
   <style>
   html,body {
@@ -52,6 +53,7 @@
   </paper-toolbar>
 
   <div class="container">
+  	<beat-pad></beat-pad>
     <bar-container></bar-container>
   </div>
 
