added 9 paper buttons to beat pad

--- a/beat-pad.html
+++ b/beat-pad.html
@@ -21,6 +21,14 @@
 
     <div id="beatPad">
       <beat-btn></beat-btn>
+      <beat-btn></beat-btn>
+      <beat-btn></beat-btn>
+      <beat-btn></beat-btn>
+      <beat-btn></beat-btn>
+      <beat-btn></beat-btn>
+      <beat-btn></beat-btn>
+      <beat-btn></beat-btn>
+      <beat-btn></beat-btn>
     </div> <!-- data bindings in local DOM -->
   </template>
 
