--- a/beat-btn.html
+++ b/beat-btn.html
@@ -1,4 +1,5 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
+<link rel="import" href="../bower_components/paper-button/paper-button.html">
 
 <dom-module id="beat-btn">
 
@@ -7,18 +8,19 @@
     /*:host {
       display: block;
     }*/
-    #beatBtn {
-      width: 33%;
-      height: 33%;
-      background-color: green;
-      float: right;
+    paper-button {
+      width: 25%;
+      height: 50px;
+
+      background: green;
+      color: red;
     }
   </style>
   
   <template>
     <!-- local DOM for your element -->
-
-    <div id="beatBtn"></div> <!-- data bindings in local DOM -->
+    <paper-button raised></paper-button>
+    <!-- data bindings in local DOM -->
   </template>
 
   <script>
