--- a/beat-btn.html
+++ b/beat-btn.html
@@ -5,12 +5,11 @@
 
   <style>
     /* CSS rules for your element */
-    /*:host {
-      display: block;
-    }*/
+    
+    /*Sami: it feels like there is default paper-button width at small screen sizes that overrides my settings. When shrinking the browser, the buttons are not responsive along the width.*/
     paper-button {
       width: 25%;
-      height: 50px;
+      height: 25%;
 
       background: green;
       color: red;
