--- a/bar-set.html
+++ b/bar-set.html
@@ -4,22 +4,17 @@
 
   <style>
     /* CSS rules for your element */
-    :host {
-      display: block;
-    }
-    #barSet {
+     barSet {
       width: 25%;
-      height: 100%;
-      background-color: white;
-
-      bottom: 0px;
+      height: 10%;
+      background-color: violet;
     }
   </style>
   
   <template>
     <!-- local DOM for your element -->
-
-    <div id="barSet"></div> <!-- data bindings in local DOM -->
+    <div class="barSet"></div>
+    <!-- data bindings in local DOM -->
   </template>
 
   <script>
