--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html>
-
 <head>
 
   <title>4brs-working-title</title>
@@ -16,6 +15,7 @@
   <link rel="import" href="../bower_components/paper-toolbar/paper-toolbar.html">
   <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
   <link rel="import" href="../bower_components/iron-icons/iron-icons.html">
+  <link rel="import" href="../bower_components/iron-icons/av-icons.html">
 
   <!-- Below are the 4brs components -->
   <link rel="import" href="../bar-container.html">
@@ -54,6 +54,14 @@
   	background-color: blue;
   	float:right;
   }
+
+  bar-container {
+  	width: 100%;
+  	height: 40%;
+  	background-color: red;
+  	position: absolute;
+  	bottom: 0;
+  }
   </style>
 
 </head>
@@ -61,7 +69,6 @@
 <body unresolved>
 
   <paper-toolbar>
-    <!-- Charles: I put the fullscreen button for shits and giggles but it's not functional right now -->
     <paper-icon-button icon="fullscreen"></paper-icon-button>
     <div class="title">4bars</div>
     <paper-icon-button icon="settings"></paper-icon-button>
@@ -74,5 +81,4 @@
   </div>
 
 </body>
-
 </html>
